<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sweth.inclass09.MainActivity">

    <TextView
        android:text="@string/TextViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:id="@+id/EmailTextView"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/EmailValue_label"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextEmailValue"
        android:textColor="@android:color/black"/>

    <TextView
        android:text="@string/Password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmailValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textViewPassword"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/PasswordValue_label"
        android:ems="10"
        android:layout_below="@+id/editTextEmailValue"
        android:layout_alignLeft="@+id/editTextEmailValue"
        android:layout_alignStart="@+id/editTextEmailValue"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:id="@+id/editTextPasswordValue"
        android:textColor="@android:color/black"/>

    <Button
        android:text="@string/LoginButton_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPasswordValue"
        android:layout_alignLeft="@+id/editTextPasswordValue"
        android:layout_alignStart="@+id/editTextPasswordValue"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="14dp"
        android:id="@+id/buttonLogin"
        android:textColor="@android:color/black"/>

    <TextView
        android:text="@string/textViewText_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignStart="@+id/buttonLogin"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="18dp"
        android:id="@+id/textViewText"
        android:textColor="@android:color/black"/>

    <TextView
        android:text="@string/FirstName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewText"
        android:layout_toLeftOf="@+id/editTextPasswordValue"
        android:layout_toStartOf="@+id/editTextPasswordValue"
        android:layout_marginTop="32dp"
        android:id="@+id/textViewFirstName"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/FNameValue_label"
        android:ems="10"
        android:layout_below="@+id/textViewText"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignStart="@+id/buttonLogin"
        android:layout_marginTop="15dp"
        android:id="@+id/editTextFirstNameValue"
        android:textColor="@android:color/black"/>

    <TextView
        android:text="@string/LastName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFirstNameValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/textViewLastName"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/LNameValue_Label"
        android:ems="10"
        android:layout_below="@+id/editTextFirstNameValue"
        android:layout_alignLeft="@+id/editTextPasswordValue"
        android:layout_alignStart="@+id/editTextPasswordValue"
        android:layout_marginTop="10dp"
        android:id="@+id/editTextLastNameValue"
        android:textColor="@android:color/black"/>

    <TextView
        android:text="@string/Email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLastNameValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:id="@+id/textViewEmail"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/EmailValue1_label"
        android:ems="10"
        android:layout_below="@+id/editTextLastNameValue"
        android:layout_toRightOf="@+id/textViewFirstName"
        android:layout_toEndOf="@+id/textViewFirstName"
        android:layout_marginTop="14dp"
        android:id="@+id/editTextEmailValue1"
        android:textColor="@android:color/black"/>

    <TextView
        android:text="@string/textViewPassword_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmailValue1"
        android:layout_alignLeft="@+id/textViewFirstName"
        android:layout_alignStart="@+id/textViewFirstName"
        android:layout_marginTop="22dp"
        android:id="@+id/textViewPassword1"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Password1Value_label"
        android:ems="10"
        android:layout_below="@+id/editTextEmailValue1"
        android:layout_alignLeft="@+id/editTextLastNameValue"
        android:layout_alignStart="@+id/editTextLastNameValue"
        android:id="@+id/editTextPassword1Value"
        android:textColor="@android:color/black"/>

    <Button
        android:text="@string/SignUpButton_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/buttonSignUp"
        android:textColor="@android:color/black"/>
</RelativeLayout>