<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LastActivity">

    <TextView
        android:text="@string/TextViewChannelName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textViewChannelName" />

    <ListView
        android:layout_width="match_parent"
        android:layout_below="@+id/textViewChannelName"
        android:layout_toRightOf="@+id/textViewChannelName"
        android:layout_toEndOf="@+id/textViewChannelName"
        android:layout_marginTop="17dp"
        android:id="@+id/MyListView2"
        android:layout_height="380dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/editTextTexttoSend_label"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textViewChannelName"
        android:layout_toEndOf="@+id/textViewChannelName"
        android:id="@+id/editTextTexttoSend" />

    <Button
        android:text="@string/ButtonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/buttonSend" />
</RelativeLayout>